fix: adds test for set union + sonar warnings